--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p><a href="exercicio8/index.html">Exercício 8</a></p>
             <p><a href="exercicio9/index.html">Exercício 9</a></p>
             <p><a href="exercicio10/index.html">Exercício 10</a></p>
+            <p><a href="exercicio11/index.html">Exercício 11</a></p>
         </div>
         <div id="footer">
             <p>Acesse o portal <a href="https://site.fatecfranca.edu.br">FATEC Franca-SP</a></p>
