--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <p><a href="exercicio9/index.html">Exercício 9</a></p>
             <p><a href="exercicio10/index.html">Exercício 10</a></p>
             <p><a href="exercicio11/index.html">Exercício 11</a></p>
+            <p><a href="exercicio12/index.html">Exercício 12</a></p>
+        </div>
+        <div id="coluna3">
+            <p><a href="exercicio13/index.html">Exercício 13</a></p>
         </div>
         <div id="footer">
             <p>Acesse o portal <a href="https://site.fatecfranca.edu.br">FATEC Franca-SP</a></p>
