--- a/exercicio13/index.html
+++ b/exercicio13/index.html
@@ -15,10 +15,12 @@
         <h1>Exercício 13</h1>
         <h2>Calculadora de IMC</h2>
         <form action="/" id="formulario" method="post">
-            <label for="peso">Peso (kg):</label>
-            <input type="text" id="peso" name="peso">
-            <label for="altura">Altura (m):</label>
-            <input type="text" id="altura" name="altura">
+            <div class="peso">
+                <input type="text" id="peso" name="peso" placeholder="Peso (kg)">
+            </div>
+            <div class="altura">
+                <input type="text" id="altura" name="altura" placeholder="Altura (m)">
+            </div>
             <button type="submit">Calcular</button>
         </form>
         <div id="resultado"></div>
